--- a/src/app/interes_add.component.html
+++ b/src/app/interes_add.component.html
@@ -1,1 +1,14 @@
-<h2>ADD INTERES</h2>
+<div class="border_half_page" >
+	<div id="content_left" class="text_center">
+	<span>
+		<span style="display: block; margin-top:15%;">{{area_title}}</span><br />
+		<span>{{input_interes_string}} <span [ngStyle]="{'color': myColor}">{{interes}}</span></span><br>
+		<input [(ngModel)]="interes" id="new_interes" type="text" name="new_interes" />
+		<input style="" onclick="add_interes();" id="add_interes_btn" type="submit" value="{{button_add_interes_text}}" /><br />
+		<br /><br /><br />
+		{{input_color_string}}<br>
+		<input [(ngModel)]="myColor" value="{{myColor}}" type="text"/><br />
+	</span>
+
+	</div>
+</div>
