--- a/src/app/user_add.component.html
+++ b/src/app/user_add.component.html
@@ -2,15 +2,13 @@
 	<div id="content_left" class="text_center">
 		<div id="form"><br />
 			
-			<span class="self_border"><h1>User Add:</h1></span> 
+			<span class="self_border"><h1>User Add</h1></span> 
 			<span>
-				<h2>Nick:</h2> <input id="nick" type="text" name="nick" minlength="3" maxlength="30" /><br/>
-			</span>
-			<span>
-				<h2>Phone:</h2> <input id="phone" type="text" name="phone" /><br />
-			</span>
-			<span>
-				<h2>Age:</h2> <input id="age" type="number" min="6" max="666" name="age" /><br />
+				<h2>Nick:</h2> <input id="nick" type="text" name="nick" minlength="3" maxlength="30"/>
+			
+				<h2>Phone:</h2> <input id="phone" type="text" name="phone"/>
+			
+				<h2>Age:</h2> <input id="age" type="number" min="6" max="666" name="age"/>
 			</span>
 			<br/>
 			<span>
