--- a/src/app/users_get.component.html
+++ b/src/app/users_get.component.html
@@ -1,5 +1,32 @@
-<h1>Здрассте</h1>
-
+<h1>All Users</h1>
+<div id="content_left" class="text_center">
+	<div id="form"><br>
+		<br>
+		<span class="self_border">User Search:</span> <br><br>
+		<span>
+			Nick: <input id="nick" type="text" name="nick" minlength="3" maxlength="30"><br>
+		</span>
+		<span>
+			Phone: <input id="phone" type="text" name="phone"><br>
+		</span>
+		<span>
+			Age: <input id="age" type="number" min="6" max="666" name="age"><br>
+		</span>
+		<span>
+			Interests:<br>
+			<select id="interes_list" name="interests" multiple="multiple">
+				<option *ngFor="let interes of interests" value="{{interes.id}}">{{interes.interes}}</option>
+			</select>
+		</span> <br>
+		<span>
+			<input target="_blank" type="button" value="Add" onclick="window.open('/user/add')">
+			<!--<a target="_blank" href="/user/add">add</a> -->
+			<input onclick="search_user();" type="submit" value="Search!">
+			<button onclick="reset_input();">RESET</button>
+		</span> <br>
+		<span class="alert"></span>
+	</div>
+</div>
 <div id="content_right" class="">
 	<div class="clear" id="users"><br><br><br><br>
 		<table>
