--- a/src/app/users_get.component.html
+++ b/src/app/users_get.component.html
@@ -50,6 +50,17 @@
 			<!--<span *ngFor="let interes of user.interests"class="col-1-4">{{interes}}</span>-->
 		</tbody>
 		</table>
+
+		 <div>
+			 <nav>
+				 <a routerLink="/users_get/0" routerLinkActive="active">Prev</a>
+				 <a routerLink="/users_get/1" routerLinkActive="active">1</a>
+				 <a routerLink="/users_get/2" routerLinkActive="active">2</a>
+			     <a routerLink="/users_get/3" routerLinkActive="active">3</a>	  		  			
+				 <a routerLink="/users_get/4" routerLinkActive="active">4</a>
+				 <a routerLink="/users_get/0" routerLinkActive="active">Next</a>
+			 </nav>
+		 </div>
 	</div>	 
 </div>
 
