--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,20 +9,20 @@ h2 {
   padding-top: 0;
 }
 nav a {
-  padding: 5px 10px;
+  padding: 9px 18px 9px 18px;
   text-decoration: none;
   margin-top: 10px;
   display: inline-block;
-  background-color: #eee;
-  border-radius: 4px;
+  border:3px solid #7b8391;
+  border-radius: 20px;
+  background: white;
+  color:#6c727c;
+  font-weight: 700;
+  font-size: 14px;
+  transition: all .3s ease;
 }
-nav a:visited, a:link {
-  color: #607D8B;
-}
-nav a:hover {
-  color: #039be5;
-  background-color: #CFD8DC;
-}
-nav a.active {
-  color: #039be5;
+
+nav a:hover{
+  background: #7b8391;
+  color:white;
 }
