--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,6 +8,10 @@ h2 {
   margin-top: 0;
   padding-top: 0;
 }
+nav{
+  display: flex;
+  justify-content: center;
+}
 nav a {
   padding: 9px 18px 9px 18px;
   text-decoration: none;
