--- a/src/app/interes_add.component.css
+++ b/src/app/interes_add.component.css
@@ -3,7 +3,10 @@
   margin-top: 49px;
   color: #aab2bf;
 } 
-
+.border_half_page{
+  display: flex;
+  justify-content: center;
+}
 #new_interes{
   border-radius: 20px;
   border:3px solid #7b8391;
