--- a/src/app/interes_add.component.html
+++ b/src/app/interes_add.component.html
@@ -2,7 +2,7 @@
 	<div id="content_left" class="text_center">
 	<span>
 		<h1 class="title">{{area_title}}</h1><br />
-		<span><h2>{{input_interes_string}}</h2> <span [ngStyle]="{'color': myColor}">{{interes}}</span></span><br/>
+		<span> <span [ngStyle]="{'color': myColor}">{{interes}}</span></span><br/>
 		<input [(ngModel)]="interes" id="new_interes" placeholder="Name interest" type="text" name="new_interes" />
 		<input class="a" onclick="add_interes();" id="add_interes_btn" type="submit" value="{{button_add_interes_text}}" /><br />
 		<br /><br /><br />
