--- a/src/app/users_get.component.html
+++ b/src/app/users_get.component.html
@@ -1,19 +1,19 @@
-<h1>All Users</h1>
+
 <div id="content_left" class="text_center">
 	<div id="form"><br>
 		<br>
 		<span class="self_border">User Search:</span> <br><br>
 		<span>
-			Nick: <input id="nick" type="text" name="nick" minlength="3" maxlength="30"><br>
+			 <input id="nick" type="text" name="nick" minlength="3" placeholder="Name" maxlength="30"><br>
 		</span>
 		<span>
-			Phone: <input id="phone" type="text" name="phone"><br>
+			 <input id="phone" type="text" name="phone" placeholder="Phone"><br>
 		</span>
 		<span>
-			Age: <input id="age" type="number" min="6" max="666" name="age"><br>
+			 <input id="age" type="number" min="6" max="666" name="age"><br>
 		</span>
 		<span>
-			Interests:<br>
+			<br>
 			<select id="interes_list" name="interests" multiple="multiple">
 				<option *ngFor="let interes of interests" value="{{interes.id}}">{{interes.interes}}</option>
 			</select>
@@ -27,7 +27,7 @@
 		<span class="alert"></span>
 	</div>
 </div>
-<div id="content_right" class="">
+<div id="content_right">
 	<div class="clear" id="users"><br><br><br><br>
 		<table>
 			<tbody>
