--- a/src/app/user_add.component.html
+++ b/src/app/user_add.component.html
@@ -1,7 +1,6 @@
 <div class="border_half_page">
 	<div id="content_left" class="text_center">
 		<div id="form"><br />
-			
 			<span class="self_border"><h1>User Add</h1></span> 
 			<span>
 				<h2>Nick:</h2> <input id="nick" type="text" name="nick" minlength="3" maxlength="30"/>
@@ -14,7 +13,7 @@
 			<span>
 				<h2>Interests:</h2><br />
 				<select id="interes_list" name="interests" multiple="multiple">
-					<option *ngFor="let interes of interests" value="{{interes.id}}">{{interes.interes}}</option>
+					<option *ngFor="let interes of interests;let i=index" value="{{interes.i_id}}">{{interes.i_name}}</option>
 				</select>
 			</span> <br />
 			<a class="a" href="interes_add">Add interes</a><br>
