--- a/src/app/users_get.component.css
+++ b/src/app/users_get.component.css
@@ -50,7 +50,6 @@ h4 {
 #content_right{
   float: right;
   position: absolute;
-  top: 37px;
   right: 200px;
 }
 
@@ -64,12 +63,36 @@ h4 {
 
 input{
   font-size: 20px;
-  padding: 4px;
+  padding: 4px 35px;
   margin-top: 10px;
   border-radius: 20px;
   text-align: center;
   font-style:italic;
   border: 3px solid  #7b8391;
+}
+
+#btn_reset{
+    font-size: 20px;
+    padding: 4px 35px;
+    font-style:italic;
+    border: 3px solid  #7b8391;
+    border-radius: 20px;
+    background: none;
+    transition: all .3s ease;
+}
+#btn_reset:hover{
+    background: #7b8391;
+    color: white;
+}
+
+#btn_search{
+    background: none;
+    cursor: pointer;
+    transition: all .3s ease;
+}
+#btn_search:hover{
+    background: #7b8391;
+    color: white;
 }
 
 #interes_list{
@@ -79,6 +102,72 @@ input{
     font-style: italic;
     font-weight: 900;
 }
+
+table{
+    box-shadow: 0px 0px 5px 2px #b5728b;
+    border: none;
+}
+
+table th{border: none;}
+table th{width: 97px;}
+table tbody tr td{
+    border: none;text-align: center;font-weight: 700;
+    font-style: italic;
+        font-size: 15px;
+    color: #575366;
+}
+
+
+.navigation{margin-top: 10px;}
+.navigation a{
+    padding: 3px 13px;
+    font-size: 22px;
+    background: none;
+    color: #4f5463;
+    margin-right: 5px;
+    transition: all .3s ease;
+}
+.navigation a:hover{
+    background: #4f5463;
+    color: white;
+    
+}
+
+
+
+
+.icon-delete{font-size: 18px;color: #607D8B;}
+.icon-edit{font-size: 18px;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @media (max-width: 600px) {
