--- a/src/app/users_get.component.html
+++ b/src/app/users_get.component.html
@@ -14,7 +14,7 @@
 		<span>
 			<br>
 			<select id="interes_list" name="interests" multiple="multiple">
-				<option *ngFor="let interes of interests" value="{{interes.i_id}}">{{interes.i_name}}</option>
+				<option *ngFor="let interes of interests" value="{{interes.id}}">{{interes.name}}</option>
 			</select>
 		</span> <br>
 		<span>
