--- a/src/app/interes_add.component.html
+++ b/src/app/interes_add.component.html
@@ -3,7 +3,7 @@
 	<span>
 		
 		<span> <span [ngStyle]="{'color': myColor}">{{interes}}</span></span><br/>
-		<input [(ngModel)]="interes" id="new_interes" placeholder="Name interest" type="text" name="new_interes" />
+		<input [(ngModel)]="interest.interest" id="new_interes" placeholder="Name interest" type="text" name="new_interes" />
 		<input class="a" (click)="add_interes()"  id="add_interes_btn" type="submit" value="{{button_add_interes_text}}" /><br />
 		<br /><br /><br />
 		<div>
