--- a/src/app/user_edit.component.html
+++ b/src/app/user_edit.component.html
@@ -12,5 +12,8 @@
 			
 		</div> 
   
-  <button (click)="goBack()">Back</button>
+	<button (click)="goBack()">Back</button>
+	
+	<h1>{{ id }}</h1>
+	<div>{{ user_edit }}</div>
 </div>
