--- a/src/app/user_edit.component.html
+++ b/src/app/user_edit.component.html
@@ -1,11 +1,15 @@
 <div>
  
    <div id="form"><br />
-				<input id="nick" placeholder="Name" type="text" name="nick" /><br />
+				<input id="nick" placeholder="Name" type="text" name="nick" value="{{user_edit.name}}" /><br />
 			
-				<input id="phone" placeholder="Phone" type="text" name="phone"/><br />
+				<input id="phone" placeholder="Phone" type="text" name="phone" value="{{user_edit.phone}}" /><br />
 			
-				<input id="age" type="text" placeholder="Age" name="age"/><br />
+				<input id="age" type="text" placeholder="Age" name="age" value="{{user_edit.age}}"/><br />
+
+				<select id="interes_list" name="interests" multiple="multiple">
+					<option>{{user_edit.interests}}</option>
+			    </select>
 			  <br/>
 
 			<input type="submit" id="btn_add_user" value="Edit user" /><br>
@@ -14,6 +18,6 @@
   
 	<button (click)="goBack()">Back</button>
 	
-	<h1>{{ id }}</h1>
-	<div>{{ user_edit }}</div>
+
+	
 </div>
