--- a/src/app/users_get.component.html
+++ b/src/app/users_get.component.html
@@ -2,26 +2,27 @@
 <div id="content_left" class="text_center">
 	<div id="form"><br>
 		<br>
-		<span>
-			 <input id="nick" type="text" name="nick" minlength="3" placeholder="Name" maxlength="30"><br>
-		</span>
-		<span>
-			 <input id="phone" type="text" name="phone" placeholder="Phone"><br>
-		</span>
-		<span>
-			 <input id="age" type="text" placeholder="Age"  name="age"><br>
-		</span>
-		<span>
+	
+			 <input [(ngModel)]="search_name" id="nick" type="text" name="nick"  placeholder="Name" ><br>
+		
+			 <input [(ngModel)]="search_phone" id="phone" type="text" name="phone" placeholder="Phone"><br>
+		
+			 <input [(ngModel)]="search_age" id="age" type="text" placeholder="Age"  name="age"><br>
+		
 			<br>
-			<select id="interes_list" name="interests" multiple="multiple">
+			<!---
+			<select [(ngModel)]="search_interests.name" id="interes_list" name="interests" multiple="multiple">
 				<option *ngFor="let interes of interests" value="{{interes.id}}">{{interes.name}}</option>
 			</select>
-		</span> <br>
-		<span>
-			<input onclick="search_user();" type="submit" id="btn_search" value="Search">
+			-->
+			<input [(ngModel)]="search_interests" type="text" />
+			<input (click)="Search();" type="submit" id="btn_search" value="Search">
 			<button onclick="reset_input();" id="btn_reset">RESET</button>
-		</span> <br>
+		<br>
 		<span class="alert"></span>
+		<div *ngFor="let user of search_result">
+			<span>{{user.name}}</span>
+		</div>
 	</div>
 </div>
 <div id="content_right">
