--- a/src/app/users_get.component.html
+++ b/src/app/users_get.component.html
@@ -10,14 +10,15 @@
 			 <input [(ngModel)]="search_age" id="age" type="text" placeholder="Age"  name="age"><br>
 		
 			<br>
-			<!---
-			<select [(ngModel)]="search_interests.name" id="interes_list" name="interests" multiple="multiple">
+
+
+			<select [(ngModel)]="search_interests" id="interes_list" name="interests" multiple="multiple">
 				<option *ngFor="let interes of interests" value="{{interes.id}}">{{interes.name}}</option>
 			</select>
-			-->
+
 			<input [(ngModel)]="search_interests" type="text" />
 			<input (click)="Search();" type="submit" id="btn_search" value="Search">
-			<button onclick="reset_input();" id="btn_reset">RESET</button>
+			<!-- <button onclick="reset_input();" id="btn_reset">RESET</button> -->
 		<br>
 		<span class="alert"></span>
 		<div *ngFor="let user of search_result">
@@ -55,11 +56,12 @@
 
 		 <div>
 			 <nav class="navigation">
-				 <a routerLink="/users_get/{{(this.users_page <= 0 ? 0 : this.users_page - 1)}}" routerLinkActive="active" (click)="get_users(this.users_page - 1)" id="btn_prev_pages">&laquo;</a>
+				 <a routerLink="/users_get/{{(this.users_page <= 1 ? 1 : this.users_page -1)}}" routerLinkActive="active" (click)="get_users(this.users_page - 1)" id="btn_prev_pages">&laquo;</a>
 				 <a *ngFor="let page of pages" routerLink="/users_get/{{ page.id }}" id="btn_next_pages" routerLinkActive="active" (click)="get_users(page.id)">{{ page.id }}</a>
-				 <a routerLink="/users_get/{{this.users_page + 1}}" routerLinkActive="active" (click)="get_users(this.users_page + 1)">&raquo;</a>
+				 <a routerLink="/users_get/{{this.pages_count > this.users_page ? this.users_page + 1 : this.users_page}}" routerLinkActive="active" (click)="get_users(this.users_page + 1)">&raquo;</a>
 			 </nav>
 		 </div>
 	</div>	 
 </div>
+
 
