fix all git errors

--- a/src/app/users_get.component.html
+++ b/src/app/users_get.component.html
@@ -12,11 +12,11 @@
 			<br>
 
 			<select [(ngModel)]="search_interests" id="interes_list" name="interests" multiple="multiple">
-
-			<!---
-			<select [(ngModel)]="search_interests.name" id="interes_list" name="interests" multiple="multiple">
 				<option *ngFor="let interes of interests" value="{{interes.id}}">{{interes.name}}</option>
 			</select>
+
+			<!---
+			<select [(ngModel)]="search_interests" id="interes_list" name="interests" multiple="multiple">
 
 			<input [(ngModel)]="search_interests" type="text" />
 			<input (click)="Search();" type="submit" id="btn_search" value="Search">
@@ -67,3 +67,4 @@
 </div>
 
 
+e
